--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
+# This file is used by pip to install required python packages
+# Usage: pip install -r requirements.txt
+
+# Flask Framework
+Flask==1.0.2
+
+# Flask Packages
+Flask-Login==0.4.0
+Flask-Migrate==2.0.2
+Flask-Script==2.0.5
+Flask-SQLAlchemy==2.4.0
+Flask-WTF==0.14.2
+Flask-User==1.0.1.5
+
+
 click==7.1.1
 cycler==0.10.0
 dnspython==1.16.0
@@ -10,10 +25,7 @@ Jinja2==2.11.2
 joblib==0.14.1
 kiwisolver==1.2.0
 MarkupSafe==1.1.1
-matplotlib==3.2.1
 nltk==3.5
-numpy==1.18.3
-pandas==1.0.3
 pickle4==0.0.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
